fixed contact sizing working on spacing now

--- a/src/css/About.module.scss
+++ b/src/css/About.module.scss
@@ -8,7 +8,7 @@
 }
 .headerContainer {
   text-align: left;
-  margin-bottom: 10%;
+  margin-bottom: 5%;
   h1 {
     font-weight: 500;
     span {
@@ -24,8 +24,8 @@
   align-items: center;
   justify-content: center;
   border: 5px solid $primary-500;
-  height: 300px;
-  width: 300px;
+  height: 275px;
+  width: 275px;
   border-radius: 50%;
   overflow: hidden;
   margin-bottom: 10%;
@@ -75,11 +75,11 @@
   }
 }
 @media (min-width: $xl) {
-  .headerContainer {
-    h1 {
-      font-size: 3rem;
-    }
-  }
+  // .headerContainer {
+  //   h1 {
+  //     font-size: 3rem;
+  //   }
+  // }
   .container {
     padding: 5% 15%;
   }
