--- a/src/css/Contact.module.scss
+++ b/src/css/Contact.module.scss
@@ -7,23 +7,24 @@
   justify-content: center;
   padding: 0 5%;
   height: 100%;
-  // border: 1px solid red;
 }
 
 .card {
-  z-index: 2;
   display: flex;
   flex-direction: column;
-  padding: 2rem 1rem;
+  align-items: center;
+  width: 100%;
+  padding: 2rem;
   gap: 1rem;
   border-radius: 10px;
-  backdrop-filter: blur(10rem);
+  // border: 1px solid green;
 }
 .header {
   display: flex;
   flex-direction: row;
   align-items: center;
   padding: 0 1rem;
+  margin-bottom: 1rem;
   // justify-content: center;
   h2 {
     margin-right: 1rem;
@@ -35,7 +36,7 @@
   flex-direction: column;
   padding: 0 1rem;
   width: 100%;
-  gap: 0.8rem;
+  gap: 1rem;
   label {
     font-size: clamp(1.1rem, 0.9167rem + 0.3819vw, 1.375rem);
     font-weight: 300;
